--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-requests
-Pillow
-python-telegram-bot
-pandas
 gspread
-gspread-dataframe
-psutil
-oauth2client
-selenium==4.15.2
+gspread_dataframe
+requests
+PIL
+io
+socket
+time
+datetime
+telegram
+asyncio
