--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
+python-telegram-bot>=20.0,<21.0
 gspread
-gspread_dataframe
-requests
+gspread-dataframe
 Pillow
-python-telegram-bot
-
+requests
+google-auth
 
